fix contrast in the footer (#26)

--- a/src/styles.css
+++ b/src/styles.css
@@ -92,3 +92,6 @@ h1 {
   color: white;
 }
 
+.footer-link {
+  color: white;
+}
